Changelog
=========

0.6 ~ unreleased
----------------

- Protect the page turner settings page with the "Modify view template"
  permission.
  [davisagli]

- Avoid purging existing view methods for the File type on installation.
  [davisagli]

0.5 ~ 2010-05-21
----------------

- Initial release